Vertical nav footer overlap fix

--- a/sass/template-parts/blocks/_dark-light-stats.sass
+++ b/sass/template-parts/blocks/_dark-light-stats.sass
@@ -57,6 +57,7 @@
     &__listWrapper
         overflow: hidden
         margin-bottom: 48px
+        padding: 15px 0
     &__list
         margin-top: 50px
         width: 50%
